[tool.poetry]
name = "streaming-dmd"
version = "1.1"
description = "Streaming Dynamic Mode Decomposition"
authors = ["Jaime <jaimeliew1@gmail.com>"]
license = "MIT"
packages = [{ include = "sDMD" }]

[tool.poetry.dependencies]
python = "^3.8"
# Upper bound excludes NumPy 3+ until tested. NumPy 2.x is required by recent cvxpy / GridSim stacks;
# ``^1.16.5`` previously forced pip to downgrade to 1.26.x when installing editable streaming-dmd.
numpy = ">=1.16.5,<3"

[tool.poetry.group.examples.dependencies]
matplotlib = "^3.7.2"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.3.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
